--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
+	"ownerNumber": "6285654730377",
+	"ownerNumberr": "6285654730377",
 	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownername": "Nandastore",
+	"botname":"NANDABOTZ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  ΛᄂPΉΛ BӨƬ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  NANDABOTZ  」\nCreated By @Nanda"
 }
