--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,7 @@
 	"cr": "@ZeeoneOfc",
 	"ownername": "NANDA STORE",
 	"botname":"NANDABOTZ",
-	"thumb":"thumbnail_1.jpg",
+	"thumb":"IMG-20211008-WA0056.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"fake": " 「  NANDABOTZ  」\nCreated By @Nanda"
 }
