--- a/settings.json
+++ b/settings.json
@@ -13,6 +13,6 @@
 	"ownername": "NANDA STORE",
 	"botname":"NANDABOTZ",
 	"thumb":"IMG-20211008-WA0056.jpg",
-	"fakethumb":"thumbnail_1.jpg", 
+	"fakethumb":"IMG-20211008-WA0056.jpg", 
 	"fake": " 「  NANDABOTZ  」\nCreated By @Nanda"
 }
