--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "scraper-instagram": "^1.0.17",
     "spinnies": "^0.5.1",
     "twitter-url-direct": "^1.0.1",
-    "hxz-api": "^1.0.1",
+    "hxz-api": "^1.0.1"
   },
   "scripts": {
     "start": "node zeeone",
