--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6285654730377",
-	"ownerNumberr": "6285654730377",
-	"cr": "@ZeeoneOfc",
-	"ownername": "NANDA STORE",
-	"botname":"NANDABOTZ",
-	"thumb":"IMG-20211008-WA0056.jpg",
-	"fakethumb":"IMG-20211008-WA0056.jpg", 
-	"fake": " 「  NANDABOTZ  」\nCreated By @Nanda"
+	"pemilikNumber" : " 628881626611",
+	"ownerNumberr" : "628881626611" ,
+	"cr" : "@aiko" ,
+	"nama pemilik" : "AikkoStore" ,
+	"namabot" : "AikkoBotz" ,
+	"jempol" : "IMG-20211008-WA0056.jpg" ,
+	"fakethumb" : "IMG-20211008-WA0056.jpg" ,
+	"palsu" : " Aikko\nDibuat Oleh @Aikko" ,
 }
